Added error handling

--- a/lib/app/localization/intl_bg.arb
+++ b/lib/app/localization/intl_bg.arb
@@ -1,13 +1,13 @@
 {
   "@@locale": "bg",
   "error": "Грешка",
-  "goToBegging": "Отиди в началото",
+  "goStart": "Отиди в началото",
   "home": "У дома",
   "business": "Бизнес",
   "school": "Училище",
   "settings": "Настройки",
   "flutterDemo": "Flutter Demo",
-  "logIn": "Влез",
+  "login": "Влез",
   "enterEmail": "Въведи E-mail",
   "enterPassword": "Въведи парола",
   "mainScreen": "Главен екран",
@@ -16,5 +16,29 @@
   "settingsView": "Екран с настройки",
   "schoolView": "Училищен екран",
   "homeDetails": "Главни детайли",
-  "register": "Регистрация"
+  "register": "Регистрация",
+  "invalidEmail": "Майла е невалиден",
+  "invalidPass": "Паролата е невалидна или прекалено слаба",
+  "loginFailed": "Неуспешно вписване",
+  "storageError": "Записването на акаунта е не успешно",
+  "jsonError": "Проблем с полоучените данни",
+  "unknownError": "Не известен проблем",
+  "connectionTimeoutError": "Интерне връзката изтече",
+  "weakInternetUpError": "Слаб интернет за изпращане",
+  "weakInternetDownError": "Слаб интернет за получаване",
+  "badSecurityError": "Лоша сигурност на връзката",
+  "badResponseError": "Лош отговор на заявка",
+  "canceledRequestError": "Отказана заявка",
+  "uncaughtUserError": "Нехванат потребителска грешка",
+  "badConnectionError": "Лоша връзка",
+  "unknownNetworkError": "Неизвестна мрежова грешка",
+  "uncaughtNetworkError": "Нехваната мрежова грешка",
+  "userLogoutError": "Грешка при отписване на потребилтел",
+  "userLoginError": "Грешка при вписване на потребилтел",
+  "refreshTokenError": "Грешка при подновяване на аутентикация",
+  "userInitError": "Грешка при инициализация на потребил",
+  "userDeletionError": "Грешка при изтриване на потребитл",
+  "userSavingError": "Грешка при записване на потребител",
+  "themeSaveError": "Failed to save theme",
+  "localizationSaveError": "Failed to save localization"
 }
