--- a/lib/app/localization/intl_en.arb
+++ b/lib/app/localization/intl_en.arb
@@ -1,13 +1,13 @@
 {
   "@@locale": "en",
   "error": "error",
-  "goToBegging": "Go to begging",
+  "go_start": "Go to start",
   "home": "Home",
   "business": "Business",
   "school": "School",
   "settings": "Settings",
   "flutterDemo": "Flutter Demo",
-  "logIn": "Log in",
+  "login": "Log in",
   "enterEmail": "Enter E-mail",
   "enterPassword": "Enter password",
   "mainScreen": "Main Screen",
@@ -16,5 +16,29 @@
   "settingsView": "Settings view",
   "schoolView": "School view",
   "homeDetails": "Home details",
-  "register": "Register"
+  "register": "Register",
+  "invalidEmail": "Email is invalid",
+  "invalidPass": "Password is invalid or too week",
+  "loginFailed": "Login failed $failure",
+  "storageError": "Failed storage read/write procedure",
+  "jsonError": "Failed json mapping",
+  "unknownError": "Unknown error captured",
+  "connectionTimeoutError": "Connection timeout",
+  "weakInternetUpError": "Too leak internet upload speed",
+  "weakInternetDownError": "Too leak internet download speed",
+  "badSecurityError": "Bad security",
+  "badResponseError": "Bad response",
+  "canceledRequestError": "Canceled request",
+  "uncaughtUserError": "Uncaught user exception error",
+  "badConnectionError": "Bad Connection",
+  "unknownNetworkError": "Unknown network error",
+  "uncaughtNetworkError": "Uncaught network error",
+  "userLogoutError": "User log out failed",
+  "userLoginError": "User login failed",
+  "refreshTokenError": "Refresh token procedure failed",
+  "userInitError": "User initialization failed",
+  "userDeletionError": "User deletion failed",
+  "userSavingError": "User saving failed",
+  "themeSaveError": "Failed to save theme",
+  "localizationSaveError": "Failed to save localization"
 }
